--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 
   <div class="gallery">
     <!-- Images -->
-    <img src="images/gallery(1).jpg" alt="Gallery Image 1">
-    <img src="images/gallery(2).jpg" alt="Gallery Image 2">
-    <img src="images/gallery(3).jpg" alt="Gallery Image 3">
-    <img src="images/gallery(4).jpg" alt="Gallery Image 4">
-    <img src="images/gallery(5).jpg" alt="Gallery Image 5">
-    <img src="images/gallery(6).jpg" alt="Gallery Image 6">
-    <img src="images/gallery(7).jpg" alt="Gallery Image 7">
-    <img src="images/gallery(8).jpg" alt="Gallery Image 8">
-    <img src="images/gallery(9).jpg" alt="Gallery Image 9">
-    <img src="images/gallery(10).jpg" alt="Gallery Image 10">
-    <img src="images/gallery(11).jpg" alt="Gallery Image 11">
-    <img src="images/gallery(12).jpg" alt="Gallery Image 12">
-    <img src="images/gallery(13).jpg" alt="Gallery Image 13">
-    <img src="images/gallery(14).jpg" alt="Gallery Image 14">
-    <img src="images/gallery(15).jpg" alt="Gallery Image 15">
-    <img src="images/gallery(16).jpg" alt="Gallery Image 16">
-    <img src="images/gallery(17).jpg" alt="Gallery Image 17">
-    <img src="images/gallery(18).jpg" alt="Gallery Image 18">
-    <img src="images/gallery(19).jpg" alt="Gallery Image 19">
-    <img src="images/gallery(20).jpg" alt="Gallery Image 20">
-    <img src="images/gallery(21).jpg" alt="Gallery Image 21">
-    <img src="images/gallery(22).jpg" alt="Gallery Image 22">
-    <img src="images/gallery(23).jpg" alt="Gallery Image 23">
-    <img src="images/gallery(24).jpg" alt="Gallery Image 24">
-    <img src="images/gallery(25).jpg" alt="Gallery Image 25">
+    <img src="gallery(1).jpg" alt="Gallery Image 1">
+    <img src="gallery(2).jpg" alt="Gallery Image 2">
+    <img src="gallery(3).jpg" alt="Gallery Image 3">
+    <img src="gallery(4).jpg" alt="Gallery Image 4">
+    <img src="gallery(5).jpg" alt="Gallery Image 5">
+    <img src="gallery(6).jpg" alt="Gallery Image 6">
+    <img src="gallery(7).jpg" alt="Gallery Image 7">
+    <img src="gallery(8).jpg" alt="Gallery Image 8">
+    <img src="gallery(9).jpg" alt="Gallery Image 9">
+    <img src="gallery(10).jpg" alt="Gallery Image 10">
+    <img src="gallery(11).jpg" alt="Gallery Image 11">
+    <img src="gallery(12).jpg" alt="Gallery Image 12">
+    <img src="gallery(13).jpg" alt="Gallery Image 13">
+    <img src="gallery(14).jpg" alt="Gallery Image 14">
+    <img src="gallery(15).jpg" alt="Gallery Image 15">
+    <img src="gallery(16).jpg" alt="Gallery Image 16">
+    <img src="gallery(17).jpg" alt="Gallery Image 17">
+    <img src="gallery(18).jpg" alt="Gallery Image 18">
+    <img src="gallery(19).jpg" alt="Gallery Image 19">
+    <img src="gallery(20).jpg" alt="Gallery Image 20">
+    <img src="gallery(21).jpg" alt="Gallery Image 21">
+    <img src="gallery(22).jpg" alt="Gallery Image 22">
+    <img src="gallery(23).jpg" alt="Gallery Image 23">
+    <img src="gallery(24).jpg" alt="Gallery Image 24">
+    <img src="gallery(25).jpg" alt="Gallery Image 25">
   </div>
 
   <footer>
