--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Photography & AI Art Gallery</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .gallery img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
   <header>
